Fix border for header on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,8 @@ article time {
   }
   
   #header {
+    border: 0;
+    border-top: 1px solid #ddd;
     bottom: 0;
     margin: 0;
     padding: 10px 0;
